fix createMap() function and add nowrap on map

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-
 #map{
-    width: 684px;
     line-height: 0px;
+    white-space: nowrap;
 }
 
 
